[project]
name = "tastypy"
version = "0.0.0"
description = "A thin API wrapper for TastyTrade's open API"
readme = "README.md"
authors = [{ name = "Benjamin Vogel", email = "ben10vogel@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "rich>=14.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pre-commit>=4.3.0", "ruff>=0.12.9", "typer>=0.16.1"]
