[project]
name = "tastypy"
version = "1.4.0"
description = "A thin API wrapper for TastyTrade's open API"
readme = "README.md"
authors = [{ name = "Benjamin Vogel", email = "ben10vogel@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pytz>=2025.2",
    "rich>=14.1.0",
]

[project.optional-dependencies]
build = ["uv ~= 0.7.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "python-semantic-release>=10.3.1",
    "ruff>=0.12.9",
    "typer>=0.16.1",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "tastypy"
    git add uv.lock
    uv build
"""

[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]
